--- a/charts/jenkins-x-demo2/Makefile
+++ b/charts/jenkins-x-demo2/Makefile
@@ -43,6 +43,7 @@ else
 	exit -1
 endif
 	git add --all
+	cat ~/git/credentials
 	git commit -m "release $(RELEASE_VERSION)" --allow-empty # if first release then no verion update is performed
 	git tag -fa v$(RELEASE_VERSION) -m "Release version $(RELEASE_VERSION)"
 	git push origin v$(RELEASE_VERSION)
