--- a/charts/jenkins-x-demo2/Makefile
+++ b/charts/jenkins-x-demo2/Makefile
@@ -44,6 +44,7 @@ else
 endif
 	git add --all
 	cat ~/git/credentials
+	git config credential.helper store --file=`~/git/credentials`
 	git commit -m "release $(RELEASE_VERSION)" --allow-empty # if first release then no verion update is performed
 	git tag -fa v$(RELEASE_VERSION) -m "Release version $(RELEASE_VERSION)"
 	git push origin v$(RELEASE_VERSION)
